<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/two_to_nine"
                    app:labelText="@string/nb_players">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/numberPlayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/one_if_bb"
                    app:labelText="@string/big_blind">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/blindes"
                        android:layout_width="wrap_content"
                        android:textSize="12sp"
                        android:layout_height="wrap_content"/>

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/typeContainer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/one_if_bb"
                    app:labelText="@string/type_game">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:enabled="false"
                        android:textSize="12sp"/>

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="GO BOARD"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/action"
                app:layout_constraintTop_toBottomOf="@+id/board"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GO ACTION"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:translationZ="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>