<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DD000000"
        android:clickable="true"
        android:focusable="true"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:orientation="vertical">

        <com.example.thomasperrin.pokerhh.components.Board
                android:id="@+id/board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </com.example.thomasperrin.pokerhh.components.Board>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_margin="40dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                android:padding="20dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/step"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pre_flop"
                            android:textStyle="bold"
                            android:textSize="22sp"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:textColor="@color/colorPrimary"/>

                    <TextView
                            android:id="@+id/position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/utg"
                            android:textSize="22sp"
                            android:textColor="@color/colorPrimary"/>

                </LinearLayout>


                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/background_grey"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/utg"
                        android:textSize="22sp"
                        android:visibility="invisible"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/colorPrimary"/>

                <EditText
                        android:id="@+id/raiseValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:inputType="numberDecimal"
                        android:hint="@string/hint_price"/>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/fold"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"
                            android:text="@string/fold"/>

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/raise"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/background_grey"
                            app:cornerRadius="10dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="17sp"
                            android:text="@string/raise"/>

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/action"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"
                            android:text="@string/limp"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="12sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>